--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,16 @@
 {
   "manifest_version": 2,
-  "name": "test",
-  "description": "测试",
-  "version": "0.1",
+  "name": "云盘钥匙",
+  "description": "调取别人接口，制作云盘钥匙",
+  "version": "1.0",
   "browser_action": {
+    "default_title": "请勿用于商业用途，欢迎赞助。",
     "default_popup": "hello.html"
+  },
+  "icons": {
+    "19": "img/icon_19.png",
+    "38": "img/icon_38.png",
+    "128": "img/icon_128.png"
   },
   "content_scripts": [
     {
@@ -25,7 +31,8 @@
       ],
       "exclude_matches": [
         "https://pan.baidu.com/share/init*",
-        "http://pan.baidu.com/share/init*"
+        "http://pan.baidu.com/share/init*",
+        "*://*.bilibili.com/*"
       ],
       "js": [
         "jquery-3.2.1.min.js",
