--- a/manifest.json
+++ b/manifest.json
@@ -15,12 +15,13 @@
   "content_scripts": [
     {
       "matches": [
-        "https://www.zhihu.com/question/*"
+        "https://www.zhihu.com/question/*",
+        "https://zhuanlan.zhihu.com/p/*"
       ],
       "js": [
         "zhihu.js"
       ],
-      "run_at": "document_start"
+      "run_at": "document_end"
     },
     {
       "matches": [
