--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "云盘钥匙",
   "description": "调取别人接口，制作云盘钥匙",
-  "version": "1.3",
+  "version": "1.4",
   "browser_action": {
     "default_title": "请勿用于商业用途，欢迎赞助。",
     "default_popup": "hello.html"
@@ -13,6 +13,15 @@
     "128": "img/icon_128.png"
   },
   "content_scripts": [
+    {
+      "matches": [
+        "https://pan.baidu.com/s/1*"
+      ],
+      "js": [
+        "to_pd.js"
+      ],
+      "run_at": "document_end"
+    },
     {
       "matches": [
         "https://www.zhihu.com/question/*",
