接管浏览器下载，导入到aira2

--- a/manifest.json
+++ b/manifest.json
@@ -55,11 +55,12 @@
     }
   ],
   "permissions": [
-    "tabs",
-    "*://ypsuperkey.meek.com.cn/*",
-    "downloads",
     "cookies",
-    "notifications"
+    "tabs",
+    "<all_urls>",
+    "downloads",
+    "notifications",
+    "storage"
   ],
   "background": {
     "scripts": [
