2020/10/18添加新的钥匙查询接口

--- a/manifest.json
+++ b/manifest.json
@@ -64,6 +64,8 @@
   ],
   "background": {
     "scripts": [
+      "jquery-3.2.1.min.js",
+      "snap.svg-min.js",
       "background.js"
     ],
     "persistent": false
